--- a/index.html
+++ b/index.html
@@ -393,21 +393,21 @@
 
         <div class="products-container">
             <div class="product-card card-1">
-                <img src="assts/smart watch.avif" alt="Pro X1 Classic">
+                <img src="smart watch.avif" alt="Pro X1 Classic">
                 <h3>Pro X1 Classic</h3>
                 <p>الأناقة التقليدية بلمسة ذكية، مثالية للاجتماعات الرسمية والاستخدام اليومي الراقي.</p>
                 <a href="#" class="btn-main">اطلب الآن</a>
             </div>
 
             <div class="product-card card-2">
-                <img src="assts/smart watch1.avif" alt="Pro X1 Sport">
+                <img src="smart watch1.avif" alt="Pro X1 Sport">
                 <h3>Pro X1 Sport</h3>
                 <p>مصممة للأداء الشاق، مع حساسات دقيقة لتتبع نشاطك الرياضي وصحتك على مدار الساعة.</p>
                 <a href="#" class="btn-main">اطلب الآن</a>
             </div>
 
             <div class="product-card card-3">
-                <img src="assts/smart watch2.avif" alt="Pro X1 Elite">
+                <img src="smart watch2.avif" alt="Pro X1 Elite">
                 <h3>Pro X1 Elite</h3>
                 <p>الإصدار الفاخر بهيكل من التيتانيوم وشاشة كريستال، تجمع بين القوة والفخامة المطلقة.</p>
                 <a href="#" class="btn-main">اطلب الآن</a>
